# vsxu-dirty

plugins/src/sound.fmod/: CMakeLists.txt  main.cpp
plugins/src/sound.fmod/lib/: linux32
